--- a/js/react-sample-app/package.json
+++ b/js/react-sample-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://todanaoki-study.github.io/Qcome",
   "name": "react-sample-app",
   "version": "0.1.0",
   "private": true,
