--- a/js/react-sample-app/package.json
+++ b/js/react-sample-app/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://todanaoki-study.github.io/Qcome",
   "name": "react-sample-app",
   "version": "0.1.0",
   "private": true,
@@ -30,7 +29,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "defaults and supports es6-module"
     ],
     "development": [
       "last 1 chrome version",
