--- a/js/react-sample-app/package.json
+++ b/js/react-sample-app/package.json
@@ -29,13 +29,15 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all",
-      "defaults and supports es6-module"
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
